Updated content and style

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <div class="hero-content">
                 <div class="content">
                     <div class="hero-main-text">
-                        This Website is Awesome
+                        Website Heading
                     </div>
-                    <div class="text">This website has some subtext that goes here under the main title.
-                        It's smaller font and the color is lower contrast.
+                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                        incididunt ut labore et dolore magna aliqua.
                     </div>
                     <div class="btn-container">
                         <button class="btn"><strong>Sign up</strong></button>
@@ -46,19 +46,19 @@
         <div class="img-container">
             <div class="item">
                 <img class="img">
-                <div>this is some subtext under an illustration or image</div>
+                <div>Adipiscing elit ut aliquam purus sit amet luctus.</div>
             </div>
             <div class="item">
                 <img class="img">
-                <div>this is some subtext under an illustration or image</div>
+                <div>Adipiscing elit ut aliquam purus sit amet luctus.</div>
             </div>
             <div class="item">
                 <img class="img">
-                <div>this is some subtext under an illustration or image</div>
+                <div>Adipiscing elit ut aliquam purus sit amet luctus.</div>
             </div>
             <div class="item">
                 <img class="img">
-                <div>this is some subtext under an illustration or image</div>
+                <div>Adipiscing elit ut aliquam purus sit amet luctus.</div>
             </div>
         </div>
     </div>
@@ -67,11 +67,11 @@
     <div class="quote-container">
         <div class="container-2">
             <div class="quote">
-                <i>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
-                or maybe people will actually read it. Who knows? All I know is that it looks nice.</i>
+                <i>Sit amet mauris commodo quis imperdiet massa tincidunt nunc. Vitae suscipit tellus mauris a diam 
+                    maecenas. Lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt.</i>
             </div>
             <div class="quote-name">
-                -Thor, God of Thunder
+                -Velit, Aliquet
             </div>
         </div>
     </div>
@@ -80,8 +80,8 @@
     <div class="call-to-action-container">
         <div class="action-container">
             <div class="asd">
-                <div class="action-header">Call to action! It's time!</div>
-                <div>Sign up for our product by clicking that button rignt over there!</div>
+                <div class="action-header">Diam maecenas! Ultricies</div>
+                <div>Sign up for our product by clicking the sign up button!</div>
             </div>
             <div class="button">
                 <button class="btn-2"><strong>Sign up</strong></button>
@@ -91,7 +91,7 @@
 
 
     <div class="footer">
-        <div>Copyright &copy The Odin Project 2021</div>
+        <div>Copyright &copy Matthew Cook</div>
     </div>
 </body>
 </html>
