--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="action-container">
             <div class="asd">
                 <div class="action-header">Diam maecenas! Ultricies</div>
-                <div>Sign up for our product by clicking the sign up button!</div>
+                <div>Commodo odio aenean sed adipiscing!</div>
             </div>
             <div class="button">
                 <button class="btn-2"><strong>Sign up</strong></button>
